# cmake-examples-my

./: .gitignore
01-basic/A-hello-cmake/: CMakeLists.txt  main.cpp
01-basic/B-hello-headers/: CMakeLists.txt
01-basic/B-hello-headers/src/: Hello.cpp  main.cpp
01-basic/C-static-library/: CMakeLists.txt
01-basic/C-static-library/src/: Hello.cpp  main.cpp
01-basic/D-shared-library/: CMakeLists.txt
01-basic/E-installing/: CMakeLists.txt
01-basic/F-build-type/: CMakeLists.txt
01-basic/G-compile-flags/: CMakeLists.txt  main.cpp
01-basic/H-third_party-library/: CMakeLists.txt  main.cpp
01-basic/I-compiling-with-clang/: build.clang.sh
01-basic/L-cpp-standard/i-common-method/: CMakeLists.txt
01-basic/L-cpp-standard/ii-cxx-standard/: CMakeLists.txt
01-basic/L-cpp-standard/iii-compile-features/: CMakeLists.txt
02-sub-projects/A-basic/: CMakeLists.txt
02-sub-projects/A-basic/subbinary/: CMakeLists.txt  main.cpp
02-sub-projects/A-basic/subbinary1/: CMakeLists.txt
02-sub-projects/A-basic/subbinary1/src/: sublib1.cpp
02-sub-projects/A-basic/subbinary2/: CMakeLists.txt
03-code-generation/protobuf/: CMakeLists.txt
